--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,13 @@ services:
     name: vin-scanner-api
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: WEB_CONCURRENCY
+        value: 1
+      - key: PYTHONUNBUFFERED
         value: 1
